# solana-idls

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
libs/lighthouse/: Cargo.toml
libs/meteora/: Cargo.toml  README.md
libs/meteora/src/: programs.rs
libs/meteora/src/accounts/: bin_array.rs  bin_array_bitmap_extension.rs  claim_fee_operator.rs  lb_pair.rs  mod.rs  oracle.rs  position.rs  position_v2.rs  preset_parameter.rs  preset_parameter2.rs  token_badge.rs
libs/meteora/src/errors/: lb_clmm.rs  mod.rs
libs/meteora/src/instructions/: add_liquidity.rs  add_liquidity2.rs  add_liquidity_by_strategy.rs  add_liquidity_by_strategy2.rs  add_liquidity_by_strategy_one_side.rs  add_liquidity_by_weight.rs  add_liquidity_one_side.rs  add_liquidity_one_side_precise.rs  add_liquidity_one_side_precise2.rs  claim_fee.rs  claim_fee2.rs  claim_reward.rs  claim_reward2.rs  close_claim_protocol_fee_operator.rs  close_position.rs  close_position2.rs  close_position_if_empty.rs  close_preset_parameter.rs  close_preset_parameter2.rs  create_claim_protocol_fee_operator.rs  fund_reward.rs  go_to_a_bin.rs  increase_oracle_length.rs  initialize_bin_array.rs  initialize_bin_array_bitmap_extension.rs  initialize_customizable_permissionless_lb_pair.rs  initialize_customizable_permissionless_lb_pair2.rs  initialize_lb_pair.rs  initialize_lb_pair2.rs  initialize_permission_lb_pair.rs  initialize_position.rs  initialize_position_by_operator.rs  initialize_position_pda.rs  initialize_preset_parameter.rs  initialize_preset_parameter2.rs  initialize_reward.rs  initialize_token_badge.rs  migrate_bin_array.rs  migrate_position.rs  mod.rs  (+25 more)
libs/meteora/src/types/: accounts_type.rs  activation_type.rs  bin.rs  bin_liquidity_distribution.rs  bin_liquidity_distribution_by_weight.rs  bin_liquidity_reduction.rs  compressed_bin_deposit_amount.rs  compressed_bin_deposit_amount2.rs  customizable_params.rs  fee_info.rs  layout_version.rs  liquidity_parameter.rs  liquidity_parameter_by_strategy.rs  mod.rs  observation.rs  pair_status.rs  pair_type.rs  protocol_fee.rs  remaining_accounts_info.rs  reward_info.rs  rounding.rs  static_parameters.rs  strategy_parameters.rs  strategy_type.rs  token_program_flags.rs  user_reward_info.rs  variable_parameters.rs
libs/open_book/: Cargo.toml  README.md
libs/open_book/src/: programs.rs
libs/open_book/src/accounts/: event.rs  event_queue_header.rs  event_view.rs  market_state.rs  market_state_v2.rs  mod.rs  open_orders.rs  request.rs  request_queue_header.rs  request_view.rs
libs/open_book/src/instructions/: cancel_order.rs  cancel_order_by_client_id.rs  cancel_order_by_client_id_v2.rs  cancel_order_v2.rs  cancel_orders_by_client_ids.rs  close_open_orders.rs  consume_events.rs  consume_events_permissioned.rs  disable_market.rs  init_open_orders.rs  initialize_market.rs  match_orders.rs  mod.rs  new_order.rs  new_order_v2.rs  new_order_v3.rs  prune.rs  replace_order_by_client_id.rs  replace_orders_by_client_ids.rs  send_take.rs  settle_funds.rs  sweep_fees.rs
libs/open_book/src/types/: cancel_order_instruction_v2.rs  fee_tier.rs  mod.rs  new_order_instruction_v3.rs  order_type.rs  self_trade_behavior.rs  side.rs
libs/orca/: Cargo.toml
libs/orca/src/: lib.rs  log.rs  testing.rs
libs/raydium/: Cargo.toml
libs/raydium_amm/: Cargo.toml  README.md
libs/raydium_amm/src/: lib.rs  log.rs  programs.rs
libs/raydium_amm/src/accounts/: amm_info.rs  fees.rs  mod.rs  target_orders.rs
libs/raydium_amm/src/errors/: mod.rs  raydium_amm.rs
libs/raydium_amm/src/instructions/: admin_cancel_orders.rs  create_config_account.rs  deposit.rs  initialize.rs  initialize2.rs  migrate_to_open_book.rs  mod.rs  monitor_step.rs  pre_initialize.rs  set_params.rs  simulate_info.rs  swap_base_in.rs  swap_base_out.rs  update_config_account.rs  withdraw.rs  withdraw_pnl.rs  withdraw_srm.rs
libs/raydium_amm/src/types/: amm_config.rs  mod.rs  withdraw_dest_token.rs  withdraw_queue.rs
libs/raydium_clmm/: Cargo.toml  README.md
libs/raydium_cpmm/: Cargo.toml  README.md
libs/raydium_cpmm/src/: programs.rs
libs/raydium_cpmm/src/accounts/: amm_config.rs  mod.rs  observation_state.rs  pool_state.rs
libs/raydium_cpmm/src/errors/: mod.rs  raydium_cp_swap.rs
libs/raydium_cpmm/src/instructions/: collect_fund_fee.rs  collect_protocol_fee.rs  create_amm_config.rs  deposit.rs  initialize.rs  mod.rs  swap_base_input.rs  swap_base_output.rs  update_amm_config.rs  update_pool_status.rs  withdraw.rs
libs/raydium_cpmm/src/types/: lp_change_event.rs  mod.rs  observation.rs  swap_event.rs
libs/switchboard_on_demand/: Cargo.toml  README.md
libs/switchboard_on_demand/src/: programs.rs
libs/switchboard_on_demand/src/accounts/: mod.rs  oracle_account_data.rs  oracle_stats_account_data.rs  pull_feed_account_data.rs  queue_account_data.rs  randomness_account_data.rs  state.rs
libs/switchboard_on_demand/src/errors/: mod.rs  sb_on_demand.rs
libs/switchboard_on_demand/src/instructions/: guardian_quote_verify.rs  guardian_register.rs  guardian_unregister.rs  mod.rs  oracle_heartbeat.rs  oracle_heartbeat_v2.rs  oracle_init.rs  oracle_init_svm.rs  oracle_reset_lut.rs  oracle_set_configs.rs  oracle_set_operator.rs  oracle_sync_lut.rs  permission_set.rs  pull_feed_close.rs  pull_feed_init.rs  pull_feed_set_configs.rs  pull_feed_submit_response.rs  pull_feed_submit_response_consensus.rs  pull_feed_submit_response_consensus_light.rs  pull_feed_submit_response_many.rs  pull_feed_submit_response_svm.rs  queue_add_mr_enclave.rs  queue_allow_subsidies.rs  queue_garbage_collect.rs  queue_init.rs  queue_init_svm.rs  queue_override_svm.rs  queue_pay_subsidy.rs  queue_remove_mr_enclave.rs  queue_reset_vault.rs  queue_set_configs.rs  queue_set_ncn.rs  queue_set_vault.rs  randomness_commit.rs  randomness_init.rs  randomness_reveal.rs  state_init.rs  state_set_configs.rs  test_update_oracle_stats.rs
libs/switchboard_on_demand/src/types/: compact_result.rs  cost_whitelist_event.rs  current_result.rs  garbage_collection_event.rs  guardian_quote_verify_event.rs  (+21 more)
scripts/: gen-client.ts  publish.sh
