[package]
name = "meteora-sol"
version = "0.1.1"
edition = "2024"
authors = ["ohaddahan@gmail.com"]
license = "MIT"
description = "Meteora DLMM"
keywords = ["meteora", "solana"]
categories = ["cryptography"]
repository = "https://github.com/ohaddahan/solana-idls/tree/master/libs/meteroa"

[dependencies]
borsh = { workspace = true }
solana-pubkey = { workspace = true, features = ["serde", "borsh"] }
solana-account-info = { workspace = true }
solana-program-error = { workspace = true, features = ["borsh", "serde"] }
solana-program-entrypoint = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true, features = ["serde", "borsh"] }
solana-decode-error = { workspace = true }
solana-msg = { workspace = true }
num-derive = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
leb128 = { workspace = true }

[features]
fetch = []
serde = []
anchor-idl-build = []
anchor = []
