[package]
name = "orca-sol"
version = "0.1.0"
edition = "2024"
authors = ["ohaddahan@gmail.com"]
license = "MIT"
description = "orca client"
keywords = ["orca", "solana"]
categories = ["cryptography"]
repository = "https://github.com/solana-pools/orca.git"

[dependencies]
borsh = { workspace = true }
solana-pubkey = { workspace = true, features = ["serde", "borsh"] }
solana-account-info = { workspace = true }
solana-program-error = { workspace = true, features = ["borsh", "serde"] }
solana-program-entrypoint = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true, features = ["serde", "borsh"] }
solana-decode-error = { workspace = true }
solana-msg = { workspace = true }
num-derive = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }

[features]
fetch = []
serde = []
anchor-idl-build = []
anchor = []
