[package]
name = "raydium_clmm"
version = "0.1.2"
edition = "2024"
authors = ["ohaddahan@gmail.com"]
license = "MIT"
description = "raydium client"
keywords = ["raydium", "solana", "clmm"]
categories = ["cryptography"]
repository = "https://github.com/ohaddahan/solana-idls/tree/master/libs/raydium_clmm"

[dependencies]
borsh = { workspace = true }
solana-pubkey = { workspace = true, features = ["serde", "borsh"] }
solana-account-info = { workspace = true }
solana-program-error = { workspace = true, features = ["borsh", "serde"] }
solana-program-entrypoint = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true, features = ["serde", "borsh"] }
solana-decode-error = { workspace = true }
solana-msg = { workspace = true }
num-derive = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }

[features]
fetch = []
serde = []
anchor-idl-build = []
anchor = []
